--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "i": "^0.3.7",
     "mysql2": "^3.11.3",
     "nodemon": "^3.1.7",
-    "sequelize": "^6.37.3"
+    "sequelize": "^6.37.3",
+    "sequelize-auto": "^0.8.8"
   }
 }
