--- a/client/package.json
+++ b/client/package.json
@@ -19,10 +19,12 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-slick": "^0.30.2",
+    "react-spring": "^9.7.4",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.13",
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
