--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.3",
+    "nodemailer": "^6.9.15",
     "nodemon": "^3.1.7",
     "sequelize": "^6.37.3",
     "sequelize-auto": "^0.8.8"
