--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "start": "nodemon src/index.js"
   },
   "dependencies": {
+    "backend": "file:",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
