--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.3",
+    "@mui/styled-engine-sc": "^6.1.3",
+    "@mui/x-date-pickers": "^7.19.0",
     "@reduxjs/toolkit": "^2.2.7",
     "antd": "^5.21.1",
+    "chart.js": "^4.4.4",
+    "client": "file:",
+    "dayjs": "^1.11.13",
     "install": "^0.13.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
