--- a/client/package.json
+++ b/client/package.json
@@ -12,19 +12,28 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
-    "@mui/material": "^6.1.3",
-    "@mui/styled-engine-sc": "^6.1.3",
-    "@mui/x-date-pickers": "^7.19.0",
-    "@reduxjs/toolkit": "^2.2.7",
-    "antd": "^5.21.1",
+    "@reduxjs/toolkit": "^2.2.8",
+    "@tiptap/core": "^2.8.0",
+    "@tiptap/extension-bullet-list": "^2.8.0",
+    "@tiptap/extension-ordered-list": "^2.8.0",
+    "@tiptap/extension-table": "^2.8.0",
+    "@tiptap/extension-table-cell": "^2.8.0",
+    "@tiptap/extension-table-header": "^2.8.0",
+    "@tiptap/extension-table-row": "^2.8.0",
+    "antd": "^5.21.3",
+    "antd-img-crop": "^4.23.0",
+    "axios": "^1.7.7",
     "chart.js": "^4.4.4",
     "client": "file:",
     "dayjs": "^1.11.13",
+    "emoji-picker-react": "^4.12.0",
     "install": "^0.13.0",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.4.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-slick": "^0.30.2",
@@ -34,6 +43,7 @@
     "redux-thunk": "^3.1.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.13",
+    "sweetalert2": "^11.14.2",
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
