--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "dayjs": "^1.11.13",
     "emoji-picker-react": "^4.12.0",
     "install": "^0.13.0",
+    "rc-slider": "^11.1.7",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-chartjs-2": "^5.2.0",
