--- a/backend/package.json
+++ b/backend/package.json
@@ -22,7 +22,8 @@
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.7",
     "sequelize": "^6.37.3",
-    "sequelize-auto": "^0.8.8"
+    "sequelize-auto": "^0.8.8",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.25.7",
