--- a/client/package.json
+++ b/client/package.json
@@ -42,6 +42,7 @@
     "react-scroll": "^1.9.0",
     "react-slick": "^0.30.2",
     "react-spring": "^9.7.4",
+    "react-to-print": "^3.0.2",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
