--- a/client/package.json
+++ b/client/package.json
@@ -48,6 +48,7 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.13",
     "sweetalert2": "^11.14.3",
     "webfontloader": "^1.6.28",
