--- a/backend/package.json
+++ b/backend/package.json
@@ -8,11 +8,13 @@
     "start": "nodemon src/index.js"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "backend": "file:",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "esm": "^3.2.25",
     "express": "^4.21.1",
@@ -20,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.3",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.7",
     "sequelize": "^6.37.3",
