--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "esm": "^3.2.25",
+    "exceljs": "^4.4.0",
     "express": "^4.21.1",
     "i": "^0.3.7",
     "jsonwebtoken": "^9.0.2",
@@ -23,6 +24,7 @@
     "mysql2": "^3.11.3",
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.7",
+    "pdfkit": "^0.15.1",
     "sequelize": "^6.37.3",
     "sequelize-auto": "^0.8.8",
     "socket.io": "^4.8.1"
