--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "client": "file:",
     "dayjs": "^1.11.13",
     "emoji-picker-react": "^4.12.0",
+    "file-saver": "^2.0.5",
     "formik": "^2.4.6",
     "install": "^0.13.0",
     "js-cookie": "^3.0.5",
@@ -34,6 +35,7 @@
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-chartjs-2": "^5.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
@@ -56,6 +58,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@types/file-saver": "^2.0.7",
     "@types/js-cookie": "^3.0.6",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
