--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "emoji-picker-react": "^4.12.0",
     "file-saver": "^2.0.5",
     "formik": "^2.4.6",
+    "html-react-parser": "^5.2.1",
     "install": "^0.13.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
