--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "sequelize": "^6.37.3",
     "sequelize-auto": "^0.8.8",
     "socket.io": "^4.8.1",
+    "systeminformation": "^5.23.14",
     "twilio": "^5.3.6"
   },
   "devDependencies": {
